--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <span id="typing-text"></span>
       </div>
       <div class="navbar-right">
-        <a href="#" onclick="location.reload()">Home</a>
         <a href="#" id="analyzeBtn">Analyze</a>
         <a href="http://127.0.0.1:5000/history" target="_blank">History</a>
         <a href="#" id="searchBtn">🔍 Search</a>
-      
+        <a href="#" onclick="location.reload()">➜] Logout</a>
+        
 
       </div>
 
@@ -217,3 +217,4 @@
 
 </body>
 </html>
+
