--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
         <span id="typing-text"></span>
       </div>
       <div class="navbar-right">
-        <a href="#" id="analyzeBtn">Analyze</a>
-        <a href="http://127.0.0.1:5000/history" target="_blank">History</a>
-        <a href="#" id="searchBtn">🔍 Search</a>
-        <a href="#" onclick="location.reload()">➜] Logout</a>
+        <a href="#" id="analyzeBtn" style="font-weight: bold;">Analyze</a>
+        <a href="http://127.0.0.1:5000/history" target="_blank" style="font-weight: bold;">History</a>
+        <a href="#" id="searchBtn" style="font-weight: bold;">🔍 Search</a>
+        <a href="#" onclick="location.reload()" style="color: white; font-weight: bold;">➜] Logout</a>
+
         
 
       </div>
@@ -217,4 +218,5 @@
 
 </body>
 </html>
+
 
