--- a/index.html
+++ b/index.html
@@ -20,27 +20,28 @@
 
     <!-- Navbar -->
      
-    <!-- Navbar -->
+<!-- Navbar -->
 <nav class="navbar">
   <div class="navbar-left">
     <span id="typing-text"></span>
   </div>
 
-  <!-- Hamburger Icon -->
-  <div class="hamburger" id="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-
-  <!-- Navbar Links -->
+  <!-- Right Section -->
   <div class="navbar-right" id="navLinks">
     <a href="#" id="analyzeBtn">Analyze</a>
     <a href="http://127.0.0.1:5000/history" target="_blank">History</a>
     <a href="#" id="searchBtn">🔍Search</a>
     <a href="#" onclick="location.reload()">➜ Logout</a>
   </div>
+
+  <!-- Hamburger ON RIGHT SIDE -->
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 </nav>
+
 
 
 
@@ -225,6 +226,7 @@
 
 </body>
 </html>
+
 
 
 
