--- a/index.html
+++ b/index.html
@@ -19,29 +19,28 @@
 
 
     <!-- Navbar -->
-     
 <!-- Navbar -->
 <nav class="navbar">
   <div class="navbar-left">
     <span id="typing-text"></span>
   </div>
 
-  <!-- Right Section -->
+  <!-- Hamburger Icon -->
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+
+  <!-- Navbar Links -->
   <div class="navbar-right" id="navLinks">
     <a href="#" id="analyzeBtn">Analyze</a>
     <a href="http://127.0.0.1:5000/history" target="_blank">History</a>
     <a href="#" id="searchBtn">🔍Search</a>
     <a href="#" onclick="location.reload()">➜ Logout</a>
   </div>
-
-  
 </nav>
-<!-- Hamburger ON RIGHT SIDE -->
-  <div class="hamburger" id="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
+
 
 
 
@@ -227,6 +226,7 @@
 
 </body>
 </html>
+
 
 
 
