--- a/index.html
+++ b/index.html
@@ -19,27 +19,21 @@
 
 
     <!-- Navbar -->
-<!-- Navbar -->
 <nav class="navbar">
-  <div class="navbar-left">
-    <span id="typing-text"></span>
-  </div>
+      <div class="navbar-left">
+        <span id="typing-text"></span>
+      </div>
+      <div class="navbar-right">
+        <a href="#" id="analyzeBtn" style="font-weight: bold;">Analyze</a>
+        <a href="http://127.0.0.1:5000/history" target="_blank" style="font-weight: bold;">History</a>
+        <a href="#" id="searchBtn" style="font-weight: bold;">🔍Search</a>
+        <a href="#" onclick="location.reload()" style="color: white; font-weight: bold;">➜]Logout</a>
 
-  <!-- Hamburger Icon -->
-  <div class="hamburger" id="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
+        
 
-  <!-- Navbar Links -->
-  <div class="navbar-right" id="navLinks">
-    <a href="#" id="analyzeBtn">Analyze</a>
-    <a href="http://127.0.0.1:5000/history" target="_blank">History</a>
-    <a href="#" id="searchBtn">🔍Search</a>
-    <a href="#" onclick="location.reload()">➜ Logout</a>
-  </div>
-</nav>
+      </div>
+
+    </nav>
 
 
 
@@ -226,6 +220,7 @@
 
 </body>
 </html>
+
 
 
 
