--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
 
 
 
+    <!-- HAMBURGER OUTSIDE NAV -->
+<div class="hamburger-container">
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</div>
+
+
+
+
 
 
 
@@ -227,6 +239,7 @@
 
 </body>
 </html>
+
 
 
 
