--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 
 
+  
   <!-- Navbar Links -->
   <div class="navbar-right" id="navLinks">
     <a href="#" id="analyzeBtn">Analyze</a>
@@ -35,17 +36,12 @@
     <a href="#" onclick="location.reload()">➜ Logout</a>
   </div>
 </nav>
-
-
-
-    <!-- HAMBURGER OUTSIDE NAV -->
-<div class="hamburger-container">
+<!-- Hamburger Icon -->
   <div class="hamburger" id="hamburger">
     <span></span>
     <span></span>
     <span></span>
   </div>
-</div>
 
 
 
@@ -234,6 +230,7 @@
 
 </body>
 </html>
+
 
 
 
