--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 
 
 
-
+  <div class="navbar-left">
+    <span id="typing-text"></span>
+  </div>
   <!-- ===================== LOGIN SECTION ===================== -->
 <div id="loginContainer" class="login-container">
   <div class="login-box">
@@ -230,6 +232,7 @@
 
 </body>
 </html>
+
 
 
 
